GNOME Bugzilla – Bug 660787
Fix build on systems without LC_MEASUREMENT
Last modified: 2011-10-03 13:33:27 UTC
Created attachment 198084 [details] [review] only use LC_MEASUREMENT if it's defined Hi. LC_MEASUREMENT is not posix and may not be defined on all systems (it's not on OpenBSD, which breaks the build). This patch only takes care of the ifdef part: the measurement display is not removed from the panel (just set to an empty label). That is to follow the current behavior of the "currency" display (which is also empty for me). If you want the labels to actually not display if they are empty, let me know.