region: Fix build on systems without LC_MEASUREMENT

LC_MEASUREMENT is not posix and may not be defined on all systems.

https://bugzilla.gnome.org/show_bug.cgi?id=660787